convolution and pulling

--- a/01 - 00 - MNIST and Fully Connected Neural Network.ipynb
+++ b/01 - 00 - MNIST and Fully Connected Neural Network.ipynb
@@ -9,20 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "print(tf.__version__)"
+    "# !!!! do not run this, it doesn't work with current version of libs !!!\n",
+    "# create copy to play around instead"
    ]
   },
   {
@@ -633,9 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -931,6 +921,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use model for prediction;\n",
+    "# our input is 28x28px img, but our model takes multiple imgs during training - it's expecting a list of imgs as input\n",
+    "# we need to reshape it - basically take the img and put it in a list\n",
+    "# if we have multiple imgs for input, we'll create a list of all of them\n",
+    "# then we can call model.predict\n",
+    "\n",
+    "\n",
     "inp = x_test[0].reshape((1, 28, 28))\n",
     "res = model.predict(inp)"
    ]
@@ -1024,12 +1021,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# after training, we can save our model's weights for reuse\n",
+    "model.save_weights('model.h5') # arg is file path\n",
+    "\n",
+    "# and then\n",
+    "model.load_weights('model.h5')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1043,9 +1046,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
