--- a/01 - 03 - Convolutional kernels and pooling.ipynb
+++ b/01 - 03 - Convolutional kernels and pooling.ipynb
@@ -133,11 +133,21 @@
    "outputs": [],
    "source": [
     "w = np.zeros((3, 3, 3))\n",
-    "#t = np.array([[1, 2, 1], [0, 0, 0], [-1, -2, -1]]) / 3\n",
-    "t = np.array([[0, 0, 0], [0, 3., 0], [0, 0, 0]]) / 3\n",
+    "\n",
+    "# this filter will find vertical lines:\n",
+    "#t = np.array([[1, 1, 1], [0, 0, 0], [-1, -1, -1]]) / 3 \n",
+    "\n",
+    "# this filter finds areas with a lot of high intensity color (all zeros except in the middle):\n",
+    "t = np.array([[0, 0, 0], [0, 3., 0], [0, 0, 0]]) / 3 \n",
+    "\n",
     "w[:,:,0] = t\n",
     "w[:,:,1] = t\n",
-    "w[:,:,2] = t"
+    "w[:,:,2] = t\n",
+    "\n",
+    "# it is not our job to choose filters/kernels:\n",
+    "# they are automatically created during training of convolutional network;\n",
+    "# we provide original imgs and labels, and then those 3x3 filters are readjusted;\n",
+    "# the model figures out itself what kind of filters are needed to recognize certain features - to arrive at correct prediction\n"
    ]
   },
   {
@@ -277,7 +287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -291,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   },
   "varInspector": {
    "cols": {
@@ -324,5 +334,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
