--- a/01 - 05 - Attention of ConvNet (VGG16).ipynb
+++ b/01 - 05 - Attention of ConvNet (VGG16).ipynb
@@ -2,6 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !!! DO NOT RUN, ERRORS OUT WITH NEWER VERSION OF LIBS !!!\n",
+    "\n",
+    "# Attention & Transfer Learning\n",
+    "\n",
+    "# Transfer learning\n",
+    "# grab already trained models and load them into your notebooks, skipping the training part"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -23,7 +37,7 @@
     "\n",
     "tf.compat.v1.disable_eager_execution()\n",
     "\n",
-    "model = VGG16(weights='imagenet')"
+    "model = VGG16(weights='imagenet') # grab weights trained on imagenet, so we can just do predictions"
    ]
   },
   {
@@ -67,7 +81,7 @@
     "img_path = './creative_commons_elephant.jpg'\n",
     "\n",
     "# `img` is a PIL image of size 224x224\n",
-    "img = image.load_img(img_path, target_size=(224, 224))\n",
+    "img = image.load_img(img_path, target_size=(224, 224)) # can change res of img on the fly while loading it\n",
     "\n",
     "# `x` is a float32 Numpy array of shape (224, 224, 3)\n",
     "x = image.img_to_array(img)\n",
@@ -78,7 +92,21 @@
     "\n",
     "# Finally we preprocess the batch\n",
     "# (this does channel-wise color normalization)\n",
-    "x = preprocess_input(x)"
+    "x = preprocess_input(x)\n",
+    "\n",
+    "\n",
+    "# model trained with vgg systems use mini-batches\n",
+    "# (see pritnted out summary, e.g. \n",
+    "# input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+    "# any number of images (None) of dims 224x224 and 3 channels (rgb)\n",
+    "# `None` means our model expects a list of imgs\n",
+    "# this is common with models - mini-batching training:\n",
+    "# when we are calculating gradients (how we need to adjust weights and biases), we are not looking at a single img, but multiple imgs (mini-batches),\n",
+    "# and calculating the avg change of weights and biases, in order to reduce the noisiness of changes and achieve more stability;\n",
+    "# good way to get to a more general solution by avoiding noise\n",
+    "\n",
+    "# another benefit of mini-batch training is the utilization of vectorization for significantly better computational performanse,\n",
+    "# as it allows processing of multiple imgs in parallel"
    ]
   },
   {
@@ -116,15 +144,32 @@
     }
    ],
    "source": [
+    "# the model has 1000 classes, so the final dense layer has 1000 neurons\n",
+    "\n",
+    "# we want the index of the activated neuron that corresponds to the highest prediction (african elephant)\n",
+    "# in order to look a the last _convolutional_ layer and find all activated connections,\n",
+    "# the ones that activated neuron 386, the one for african elephant\n",
+    "# this will show us which areas of the img the neural network was looking at when predicting that it's an elephant;\n",
+    "# we visualize what the neural network is paying attention to when predicting\n",
+    "\n",
+    "# (to some degree the way weights and biases are adjusted in neural networks _is_ a mystery \n",
+    "# a lot of it depends on initial weight distributions;\n",
+    "# initializing a model with different set of random numbers might result in completely different weights and biases)\n",
+    "\n",
+    "# so we get the last convolutional layer and take all the gradients that resulted in output of african elephant\n",
+    "\n",
+    "# we are looking a the 7x7 filter in the last convolutional layer so we can see which of those 7x7pxs were the most active during prediction\n",
+    "# we can visualize that as a heatmap (see below)\n",
+    "# to get something useful out of this, we overlay the heatmap over the original image and see which areas of the orig img the model\n",
+    "# was paying attention to\n",
+    "\n",
     "np.argmax(preds[0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -332,7 +377,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -346,9 +391,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
