--- a/02 - 02 - IMDB sentiment analysis - FC NN.ipynb
+++ b/02 - 02 - IMDB sentiment analysis - FC NN.ipynb
@@ -158,6 +158,7 @@
     }
    ],
    "source": [
+    "# using word embedding with 20 dimensions, pretrained on a big data set, downloaded from tfhub\n",
     "model = \"https://tfhub.dev/google/tf2-preview/gnews-swivel-20dim/1\"\n",
     "hub_layer = hub.KerasLayer(model, output_shape=[20], input_shape=[], \n",
     "                           dtype=tf.string, trainable=True)\n",
@@ -191,6 +192,11 @@
     }
    ],
    "source": [
+    "# The pretrained layers will be talking to 16 fully connected neurons\n",
+    "# the final layer is a single neuron - positive or negative review\n",
+    "\n",
+    "# when creating own text-analysis model, it's recommended to use pretrained embedding layers\n",
+    "\n",
     "model = tf.keras.Sequential()\n",
     "model.add(hub_layer)\n",
     "model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
@@ -464,6 +470,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# platoed at ~20th epoch, so we could have stoppped there"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -586,7 +601,9 @@
     }
    ],
    "source": [
-    "model.predict(['good movie but bad actor', 'bad movie but good actor'])"
+    "model.predict(['good movie but bad actor', 'bad movie but good actor']) \n",
+    "\n",
+    "#  we see that this type of embedding doesn't take into account the order of words (identical output for different meaning)"
    ]
   },
   {
@@ -607,7 +624,10 @@
     }
    ],
    "source": [
-    "model.predict(['Good', 'good'])"
+    "model.predict(['Good', 'good']) \n",
+    "\n",
+    "# importance of text preprocessing and data set to avoid different output for same\n",
+    "# to avoid different output for basically same meaning, just different case"
    ]
   },
   {
@@ -615,12 +635,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# to take into account word order, we need different typologies\n",
+    "\n",
+    "# the fully connected neural network we used above (snippet below):\n",
+    "\n",
+    "# ```\n",
+    "# model = tf.keras.Sequential()\n",
+    "# model.add(hub_layer)\n",
+    "# model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
+    "# model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
+    "# ```\n",
+    "\n",
+    "# this fully connected network is connecting all inputs to neuron,\n",
+    "# thus losing information on where the word is coming from\n",
+    "\n",
+    "# alternative models:\n",
+    "# - e.g. recurrent neural networks: memorize position where a particular instance was seen, taking into account the order of tokens\n",
+    "# cf LSTM, long short term memory (next notebook)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -634,9 +673,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
