--- a/02 - 03 - LSTM will find the author.ipynb
+++ b/02 - 03 - LSTM will find the author.ipynb
@@ -13,6 +13,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# LSTM: a recurrent neural network model\n",
+    "\n",
+    "\n",
+    "# bidirectional LSTM will take into account/memorize position of words\n",
+    "# after that layer we can have dense layers\n",
+    "\n",
+    "# this example: training neural network to recognize the author of input phrase\n",
+    "\n",
+    "# tokenization process:\n",
+    "# tokenizer grabbing raw text, saving it in vocabulary set and assigning index to each word\n",
+    "\n",
+    "# padding:\n",
+    "# - handle phrases of variable length\n",
+    "# - set size to e.g. 16 words\n",
+    "# - if phrase has < 16 words, populate rest with padding of 0\n",
+    "# - if phrase has > 16 words, ignore the rest\n",
+    "\n",
+    "# importance of training data set: \"You are what you eat\" applies to neural networks too\n",
+    "# - if your data set is polluted/not pre-processed properly, the neural network will likely learn sth nonsensical,\n",
+    "# e.g. it will associate a typo, such as \",,\" with a negative review just because there were more negative reviews with that typo;\n",
+    "\n",
+    "# - different typologies, activation fns, optimizers, loss fns and hyperparameters\n",
+    "# - and all of that is still heavily dependent on training data set\n",
+    "# - preprocessing and transformation of raw text into numbers is esp. important for text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import tensorflow as tf\n",
     "\n",
     "import tensorflow_datasets as tfds\n",
@@ -284,7 +316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -298,9 +330,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
